default all links to home page

--- a/zindajaved/templates/zindajaved/index.html
+++ b/zindajaved/templates/zindajaved/index.html
@@ -34,16 +34,16 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="./index.html">Home</a>
-          <a class="blog-nav-item" href="./research.html">Research</a>
-          <a class="blog-nav-item" href="./publications.html#">Publications</a>
-          <a class="blog-nav-item" href="./teaching.html">Teaching</a>
-          <a class="blog-nav-item" href="./software.html">Software</a>
-          <a class="blog-nav-item" href="./cv.html">CV</a>
-          <a class="blog-nav-item" href="./music.html#">Music</a>
-          <a class="blog-nav-item" href="./languages.html">Languages</a>
-          <a class="blog-nav-item" href="./poetry.html">Poetry</a>
-          <a class="blog-nav-item" href="./contact.html">Contact</a>
+            <a class="blog-nav-item active" href="{% url 'home' %}">Home</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Research</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Publications</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Teaching</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Software</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">CV</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Music</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Languages</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Poetry</a>
+          <a class="blog-nav-item" href="{% url 'home' %}">Contact</a>
         </nav>
       </div>
     </div>
