adding the booky app

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -62,13 +62,38 @@
                     <div class="post">
                     <h2>Links to topics of interest</h2>
                     <h4>April 2, 2019</h4>
-
                     <ul class="list-group">
                         <li class="list-group-item"><a target="_blank" href="https://math.dartmouth.edu/archive/m13w12/public_html/notes/class12.pdf">Jacobian</a></li>
                         <li class="list-group-item"><a target="_blank" href="https://mtlsites.mit.edu/Courses/6.050/2004/unit9/wyatt.apr.7.pdf">Lagrange Multipliers</a></li>
                         <li class="list-group-item"><a target="_blank" href="https://projects.iq.harvard.edu/stat110/strategic-practice-problems">Stat 110: Probability</a></li>
                         <li class="list-group-item"><a target="_blank" href="http://www.math.hawaii.edu/~ramsey/Probability/PokerHands.html">How to count?</a></li>
                         <li class="list-group-item"><a target="_blank" href="https://github.com/AllenDowney/ThinkBayes2">Computational Bayesian Statistics</a></li>
+                        <li class="list-group-item"><a target="_blank" href="http://zindajaved.com/oxam.html">Card shuffle simulation</a></li>
+                        <li class="list-group-item"><a target="_blank" href="http://www.inference.org.uk/mackay/itila/">Freely available book on information theory by David MacKay</a></li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-8 blog-main">
+                    <div class="post">
+                    <h2>Terms to Learn</h2>
+                    <h4>April 13, 2019</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#">Variance Inflation Factor</a></li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-8 blog-main">
+                    <div class="post">
+                    <h2>Guestimates</h2>
+                    <h4>April 13, 2019</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#">What is the national debt of Greek?</a></li>
                     </ul>
                     </div>
                 </div>
