adding karaye_daar.pdf with a new view

--- a/zindajaved/templates/zindajaved/karaye_daar.html
+++ b/zindajaved/templates/zindajaved/karaye_daar.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; URL={% static 'thesis/thesis_main.pdf' %}" />
+    <meta http-equiv="refresh" content="0; URL={% static 'static_pdfs/karaye_daar.pdf' %}" />
   </head>
 
   <body>
